[workspace]
resolver = "2"
members = [
    "crates/relay-core",
    "crates/relay-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Martin Queval <martin.queval@bluesoft-group.com>"]

[workspace.dependencies]
relay-core = { path = "crates/relay-core" }
thiserror = "2"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
rmqtt-codec = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
